refactor(engine): harmonize core models, controllers and dependencies for v2.1.0